--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "json-server": "^1.0.0-beta.3",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^11.0.3"
   }
 }
